Refactor database and mapping structure